# dnn

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  build.bat  build.cmd  build.sh  dnn.vcxproj  dnn.vcxproj.filters  readme.md  zlib.props
.github/workflows/: cmake.yml  codeql-analysis-beta.yml  codeql-analysis.yml
cmake/: DownloadCImg.cmake  DownloadCSVParser.cmake  DownloadGoogleTest.cmake  DownloadJPEG.cmake  DownloadNNPACK.cmake  DownloadNameof.cmake  DownloadOneDNN.cmake  DownloadPNG.cmake  DownloadVectorClass.cmake  DownloadVersion2.cmake  DownloadZLIB.cmake
include/: Activation.h  Add.h  AlignedAllocator.h  Average.h  AvgPooling.h  BatchNorm.h  BatchNormActivation.h  BatchNormActivationDropout.h  BatchNormReLU.h  BatchNormRelu.h  ChannelMultiply.h  ChannelShuffle.h  ChannelSplit.h  ChannelSplitRatioLeft.h  ChannelSplitRatioRight.h  ChannelZeroPad.h  Concat.h  Convolution.h  ConvolutionTranspose.h  Cost.h  CsvFile.h  Dataprovider.h  Definition.h  Dense.h  DepthwiseConvolution.h  Divide.h  Dropout.h  GlobalAvgPooling.h  GlobalMaxPooling.h  GroupNorm.h  Image.h  Input.h  Layer.h  LayerNorm.h  LayerNormRelu.h  LocalResponseNorm.h  LocalResponseNormalization.h  LogSoftmax.h  Max.h  MaxPooling.h  (+18 more)
src/: Activation.cpp  Add.cpp  Average.cpp  AvgPooling.cpp  BatchNorm.cpp  BatchNormHardSwish.cpp  BatchNormReLU.cpp  BatchNormReluDropout.cpp  ChannelMultiply.cpp  ChannelShuffle.cpp  ChannelSplit.cpp  ChannelZeroPad.cpp  Concat.cpp  Convolution.cpp  ConvolutionTranspose.cpp  Cost.cpp  Dense.cpp  DepthwiseConvolution.cpp  Divide.cpp  Dropout.cpp  GlobalAvgPooling.cpp  GlobalMaxPooling.cpp  Input.cpp  Layer.cpp  LocalResponseNormalization.cpp  Max.cpp  MaxPooling.cpp  Min.cpp  Model.cpp  Multiply.cpp  PartialDepthwiseConvolution.cpp  Resampling.cpp  Substract.cpp  dllmain.cpp  stdafx.cpp  test.cpp
test/bachnormactivation/: smoke.cc
test/testers/: batchnormactivation.h
